# Urocissa

./: .dockerignore  .gitignore  Dockerfile  LICENSE  LINUX.md  README.md  SEARCH.md  WINDOWS.md  build_urocissa_docker.sh  cleanup.sh  install-urocissa.mjs  install-urocissa.ps1  install-urocissa.sh  run-urocissa.mjs  run-urocissa.ps1  run-urocissa.sh  run_urocissa_docker.sh  script.sh  urocissa.mjs
gallery-backend/: .env.default  Cargo.toml  Rocket.default.toml  config.default.json
gallery-backend/lib/: lib.rs
gallery-backend/src/: initialization.rs  lib.rs  logger.rs  main.rs  migration.rs  pool.rs  synchronizer.rs  tui.rs
gallery-backend/src/batcher/: flush_tree.rs  mod.rs
gallery-backend/src/constant/: mod.rs  redb.rs  runtime.rs
gallery-backend/src/coordinator/: actor.rs  album.rs  copy.rs  deduplicate.rs  delete.rs  index.rs  mod.rs  remove.rs  update.rs  video.rs
gallery-backend/src/db/expire/: expired_check.rs  start_loop.rs  update.rs
gallery-backend/src/db/query_snapshot/: read_query_snapshots.rs  start_loop.rs
gallery-backend/src/db/tree/: mod.rs  new.rs  read_tags.rs  read_tree.rs
gallery-backend/src/db/tree_snapshot/: read_rows.rs  read_scrollbar.rs  read_tags.rs  read_tree_snapshot.rs
gallery-backend/src/executor/: batcher.rs  importer.rs  mod.rs
gallery-backend/src/executor/compressor/: image_compressor.rs  image_thumbhash.rs  mod.rs  utils.rs  video_compressor.rs  video_preview.rs
gallery-backend/src/executor/databaser/: compressor.rs  fix_orientation.rs  generate_compressed_image.rs  generate_compressed_video.rs  generate_dynamic_image.rs  generate_exif.rs  generate_image_hash.rs  generate_preview.rs  generate_thumbnail.rs  generate_width_height.rs  image_compressor.rs  image_decoder.rs  mod.rs  processor.rs  processor_image.rs  processor_video.rs  video_compressor.rs  video_ffprobe.rs
gallery-backend/src/executor/filter/: mod.rs  validator_extension.rs  validator_hash.rs  validator_modified.rs
gallery-backend/src/indexer/: mod.rs
gallery-backend/src/indexer/databaser/: fix_orientation.rs  generate_compressed_video.rs  generate_dynamic_image.rs  generate_exif.rs  generate_image_hash.rs  generate_thumbnail.rs  generate_width_height.rs  mod.rs  processor.rs  video_ffprobe.rs
gallery-backend/src/indexer/filter/: mod.rs  validator_extension.rs  validator_hash.rs  validator_modified.rs
gallery-backend/src/indexer/importer/: mod.rs
gallery-backend/src/jobs/: info.rs  initialization.rs
gallery-backend/src/jobs/indexer/: mod.rs  video_info.rs
gallery-backend/src/jobs/info/: image_info.rs  mod.rs  video_info.rs
gallery-backend/src/looper/: expire_check.rs  flush.rs  flush_query.rs  mod.rs  start_watcher.rs  update.rs
gallery-backend/src/looper/expire/: expired_check.rs  mod.rs  start_loop.rs  update.rs
gallery-backend/src/looper/query_snapshot/: mod.rs  new.rs  read_query_snapshots.rs  start_loop.rs
gallery-backend/src/looper/tree/: mod.rs  new.rs  read_tags.rs  read_tree.rs  start_loop.rs
gallery-backend/src/looper/tree_snapshot/: mod.rs  new.rs  read_rows.rs  read_scrollbar.rs  read_tags.rs  read_tree_snapshot.rs  start_loop.rs
gallery-backend/src/operations/: initialization.rs  mod.rs
gallery-backend/src/operations/hash/: mod.rs
gallery-backend/src/operations/indexation/: fix_orientation.rs  generate_compressed_video.rs  generate_dynamic_image.rs  generate_exif.rs  generate_ffmpeg.rs  generate_image_hash.rs  generate_thumbnail.rs  generate_width_height.rs  mod.rs  video_ffprobe.rs
gallery-backend/src/operations/indexer/: fix_orientation.rs  generate_compressed_video.rs  generate_thumbnail.rs  mod.rs
gallery-backend/src/operations/initialization/: ffmpeg.rs  folder.rs  logger.rs  mod.rs  redb.rs
gallery-backend/src/operations/iterator/: mod.rs  read_tree.rs  read_tree_snapshot.rs
gallery-backend/src/operations/open_db/: mod.rs
gallery-backend/src/operations/open_file/: mod.rs
gallery-backend/src/process/: get_data.rs  info.rs  io.rs  mod.rs  transitor.rs
gallery-backend/src/public/: config.rs  constant.rs  error_data.rs  expression.rs  mod.rs  redb.rs  row.rs  ser_de.rs  tui.rs
gallery-backend/src/router/: fairing.rs  mod.rs
gallery-backend/src/structure/: expression.rs  reduced_data.rs
gallery-backend/src/synchronizer/: album.rs  delete.rs  event.rs  mod.rs  video.rs  watch.rs
gallery-backend/src/tasks/: album.rs  copy.rs  deduplicate.rs  delete.rs  index.rs  mod.rs  remove.rs  video.rs
gallery-backend/src/utils/: mod.rs
gallery-backend/src/workflow/: mod.rs
(+488 files in other folders)
