[package]
name = "urocissa"
version = "0.12.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[lib]
path = "lib/lib.rs"

[profile.dev-release]
inherits = "release"
lto = false

[dependencies]
anstyle = "1.0.11"
anyhow = "1.0.98"
arrayvec = { version = "0.7.6", features = ["serde"] }
bitcode = { version = "0.6.6", features = ["arrayvec"] }
blake3 = "1.8.2"
chrono = "0.4.41"
dashmap = { version = "6.1.0", features = ["rayon"] }
dotenv = "0.15.0"
env_logger = { version = "0.11.8", features = ["humantime", "color"] }
envy = "0.4.2"
filetime = "0.2.25"
futures = "0.3.31"
image = "0.25.6"
image_hasher = "3.0.0"
indicatif = "0.17.11"
jsonwebtoken = "9.3.1"
kamadak-exif = "0.6.1"
log = { version = "0.4.27", features = ["kv"] }
notify = "8.0.0"
path-clean = "1.0.1"
rand = "0.9.1"
rayon = "1.10.0"
redb = "2.6.0"
regex = "1.11.1"
reqwest = { version = "0.12.19", features = ["json", "blocking"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_seek_stream = "0.2.6"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
thumbhash = "0.1.0"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
walkdir = "2.5.0"
zune-jpeg = "0.4.17"
