[package]
name = "urocissa"
version = "0.14.8"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[profile.dev-release]
inherits = "release"
lto = false

[dependencies]
anyhow = "1.0.99"
arrayvec = { version = "0.7.6", features = ["serde"] }
atomic_float = "1.1.0"
bitcode = { version = "0.6.7", features = ["arrayvec"] }
blake3 = "1.8.2"
bytesize = "2.1.0"
chrono = "0.4.42"
console = "0.16.1"
crossbeam-queue = "0.3.12"
dashmap = { version = "6.1.0", features = ["rayon"] }
dotenv = "0.15.0"
env_logger = { version = "0.11.8", features = ["humantime", "color"] }
envy = "0.4.2"
filetime = "0.2.26"
futures = "0.3.31"
image = "0.25.8"
image_hasher = "3.0.0"
jsonwebtoken = "9.3.1"
kamadak-exif = "0.6.1"
log = { version = "0.4.28", features = ["kv"] }
mini_executor = "2.0.3"
notify = "8.2.0"
num_cpus = "1.17.0"
path-clean = "1.0.1"
rand = "0.9.2"
rayon = "1.11.0"
redb = "2.6.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_seek_stream = "0.2.6"
serde = { version = "1.0.225", features = ["derive", "rc"] }
serde_json = "1.0.145"
superconsole = "0.2.0"
terminal_size = "0.4.3"
thumbhash = "0.1.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-rayon = "2.1.0"
unicode-width = "0.2.1"
uuid = { version = "1.18.1", features = ["v4"] }
walkdir = "2.5.0"
